@@ -20,6 +20,9 @@
      [compat.c compat.h dh.c dh.h ssh2.h sshconnect2.c sshd.c version.h]
      make dh group exchange more flexible, allow min and max group size,
      okay markus@, deraadt@
+   - stevesk@cvs.openbsd.org 2001/03/28 19:56:23
+     [scp.c]
+     start to sync scp closer to rcp; ok markus@
 
 20010328
  - (djm) Reorder tests and library inclusion for Krb4/AFS to try to 
@@ -4758,4 +4761,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1031 2001/03/29 00:36:16 mouring Exp $
+$Id: ChangeLog,v 1.1032 2001/03/29 00:39:55 mouring Exp $
